@@ -1,13 +1,3 @@
-@keyframes nod {
-    from {
-        transform: rotate(2deg);
-    }
-
-    to {
-        transform: rotate(8deg);
-    }
-}
-
 @keyframes tail-wag {
     from {
         transform: rotate(-3deg);
@@ -84,7 +74,8 @@
     // Wagtail 'playful' animation (tail-wag, triggered by JS in base.html):
     &.logo-playful {
         &:hover {
-            animation: nod 1.2s forwards;
+            transform: rotate(8deg);
+            transition: transform 1.2s ease;
 
             .wagtail-logo {
                 // stylelint-disable max-nesting-depth
